--- a/environment.yml
+++ b/environment.yml
@@ -44,7 +44,7 @@ dependencies:
       - matplotlib==3.10.7
       - narwhals==2.6.0
       - numpy==2.3.3
-      - openpyxl==3.1.5
+      - openpyxl
       - packaging==25.0
       - pandas==2.3.3
       - pillow==11.3.0
